--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -126,13 +126,17 @@
     <Compile Include="ILRMainCall.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Mgr.cs" />
+    <Compile Include="Module\UI\BaseItem.cs" />
     <Compile Include="Module\UI\BaseUI.cs" />
     <Compile Include="Module\UI\UIMgr.cs" />
+    <Compile Include="Module\UI\UIObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Module\UI\Item\" />
-    <Folder Include="Module\UI\UIPanel\" />
+    <Folder Include="Module\UI\UIItem\Item\" />
+    <Folder Include="Module\UI\UIItem\View\" />
+    <Folder Include="Module\UI\UIPanel\Panel\" />
+    <Folder Include="Module\UI\UIPanel\View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
