--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -59,24 +59,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UniTask">
-      <HintPath>..\MyPro\Library\ScriptAssemblies\UniTask.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UniTask.Addressables">
-      <HintPath>..\MyPro\Library\ScriptAssemblies\UniTask.Addressables.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UniTask.DOTween">
-      <HintPath>..\MyPro\Library\ScriptAssemblies\UniTask.DOTween.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UniTask.Linq">
-      <HintPath>..\MyPro\Library\ScriptAssemblies\UniTask.Linq.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UniTask.TextMeshPro">
-      <HintPath>..\MyPro\Library\ScriptAssemblies\UniTask.TextMeshPro.dll</HintPath>
+    <Reference Include="Unity.Addressables">
+      <HintPath>..\MyPro\Library\ScriptAssemblies\Unity.Addressables.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.ResourceManager">
@@ -130,13 +114,13 @@
     <Compile Include="Module\UI\BaseUI.cs" />
     <Compile Include="Module\UI\UIMgr.cs" />
     <Compile Include="Module\UI\UIObject.cs" />
+    <Compile Include="Module\UI\UIPanel\Panel\MainUI.cs" />
+    <Compile Include="Module\UI\UIPanel\View\MainUIView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Module\UI\UIItem\Item\" />
     <Folder Include="Module\UI\UIItem\View\" />
-    <Folder Include="Module\UI\UIPanel\Panel\" />
-    <Folder Include="Module\UI\UIPanel\View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
