添加音效系统

--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -110,6 +110,8 @@
     <Compile Include="ILRMainCall.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="HotMgr.cs" />
+    <Compile Include="Module\Sound\SoundMgr.cs" />
+    <Compile Include="Module\Sound\SoundName.cs" />
     <Compile Include="Module\UI\BaseItem.cs" />
     <Compile Include="Module\UI\BaseUI.cs" />
     <Compile Include="Module\UI\UIExtension.cs" />
