--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Help\Extension.cs" />
+    <Compile Include="Help\VectorExtension.cs" />
     <Compile Include="ILRMainCall.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="HotMgr.cs" />
