--- a/Tools/Tools/Tools.csproj
+++ b/Tools/Tools/Tools.csproj
@@ -33,6 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Excel, Version=2.1.0.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Libs\Excel.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.5.452, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Libs\ICSharpCode.SharpZipLib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Libs\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -48,8 +63,15 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="zlib.net, Version=1.0.3.0, Culture=neutral, PublicKeyToken=47d7877cb3620160">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Libs\zlib.net.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Glob.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,9 +79,32 @@
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectSelect\ProjectSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProjectSelect\ProjectSelectForm.Designer.cs">
+      <DependentUpon>ProjectSelectForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting\BaseSetting.cs" />
+    <Compile Include="Setting\CodeOutSetting.cs" />
+    <Compile Include="Setting\CodeOut\APIOut.cs" />
+    <Compile Include="Setting\CodeOut\BaseCodeOut.cs" />
+    <Compile Include="Setting\CodeOut\CdKeyOut.cs" />
+    <Compile Include="Setting\CodeOut\ConfigCodeOut.cs" />
+    <Compile Include="Setting\CodeOut\DBOut.cs" />
+    <Compile Include="Setting\CodeOut\LogOut.cs" />
+    <Compile Include="Setting\CodeOut\ProtoCodeOut.cs" />
+    <Compile Include="Setting\CodeOut\TransitProtoOut.cs" />
+    <Compile Include="Setting\ProjectSetting.cs" />
+    <Compile Include="Setting\SettingHelper.cs" />
+    <Compile Include="ToolsCookie.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectSelect\ProjectSelectForm.resx">
+      <DependentUpon>ProjectSelectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,5 +128,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
