热更工程支持读表

--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -112,6 +112,124 @@
     <Compile Include="ILRMainCall.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="HotMgr.cs" />
+    <Compile Include="Module\Config\BaseConfig.cs" />
+    <Compile Include="Module\Config\ConfigMgr.cs" />
+    <Compile Include="Module\Config\ConfigMgrCustom.cs" />
+    <Compile Include="Module\Config\ConfigRead.cs" />
+    <Compile Include="Module\Config\Configs\ActivityConfig.cs" />
+    <Compile Include="Module\Config\Configs\ADjustTrackConfig.cs" />
+    <Compile Include="Module\Config\Configs\AdsAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\ArenaLevelConfig.cs" />
+    <Compile Include="Module\Config\Configs\AwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\BForgeOutputConfig.cs" />
+    <Compile Include="Module\Config\Configs\BITrackConfig.cs" />
+    <Compile Include="Module\Config\Configs\BonusSettingsConfig.cs" />
+    <Compile Include="Module\Config\Configs\BSmithyOutputConfig.cs" />
+    <Compile Include="Module\Config\Configs\BStrongHoldConfig.cs" />
+    <Compile Include="Module\Config\Configs\BTrainingOutputConfig.cs" />
+    <Compile Include="Module\Config\Configs\BuildAreaConfig.cs" />
+    <Compile Include="Module\Config\Configs\BuildConfig.cs" />
+    <Compile Include="Module\Config\Configs\BuildLvConfig.cs" />
+    <Compile Include="Module\Config\Configs\BuildSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\ChatRoomConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubChestAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubExpConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubWarAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubWarConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubWarNpcConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubWarNpcMemberConfig.cs" />
+    <Compile Include="Module\Config\Configs\ClubWarSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\DowerBuffConfig.cs" />
+    <Compile Include="Module\Config\Configs\DowerConfig.cs" />
+    <Compile Include="Module\Config\Configs\DowerSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\DowerTreeConfig.cs" />
+    <Compile Include="Module\Config\Configs\EffectConfig.cs" />
+    <Compile Include="Module\Config\Configs\EventFBAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\EventFBConfig.cs" />
+    <Compile Include="Module\Config\Configs\EventFBDialogConfig.cs" />
+    <Compile Include="Module\Config\Configs\EventFBLevelConfig.cs" />
+    <Compile Include="Module\Config\Configs\EventFBWarConfig.cs" />
+    <Compile Include="Module\Config\Configs\FBChapterConfig.cs" />
+    <Compile Include="Module\Config\Configs\FBLevelConfig.cs" />
+    <Compile Include="Module\Config\Configs\FBLevelStageConfig.cs" />
+    <Compile Include="Module\Config\Configs\FundConfig.cs" />
+    <Compile Include="Module\Config\Configs\FunOpenConfig.cs" />
+    <Compile Include="Module\Config\Configs\GuideConfig.cs" />
+    <Compile Include="Module\Config\Configs\GuideLevelConfig.cs" />
+    <Compile Include="Module\Config\Configs\GuideSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\GuideStepConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroBreakConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroExpConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroicAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroicCardConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroicSettingsConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\HeroStarConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemEquipConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemEquipExpConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemPackConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemWarBuffConfig.cs" />
+    <Compile Include="Module\Config\Configs\ItemWarConfig.cs" />
+    <Compile Include="Module\Config\Configs\LanguageConfig.cs" />
+    <Compile Include="Module\Config\Configs\LeagueAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\LeagueSceneConfig.cs" />
+    <Compile Include="Module\Config\Configs\LeagueSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\LevelAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\MapColorConfig.cs" />
+    <Compile Include="Module\Config\Configs\MonsterConfig.cs" />
+    <Compile Include="Module\Config\Configs\MonthCardConfig.cs" />
+    <Compile Include="Module\Config\Configs\NewbieAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\OnlineAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\OpenFundConfig.cs" />
+    <Compile Include="Module\Config\Configs\PayConfig.cs" />
+    <Compile Include="Module\Config\Configs\PayGiftConfig.cs" />
+    <Compile Include="Module\Config\Configs\PayGoodsConfig.cs" />
+    <Compile Include="Module\Config\Configs\PayPackConfig.cs" />
+    <Compile Include="Module\Config\Configs\PlatformConfig.cs" />
+    <Compile Include="Module\Config\Configs\PlayerExpConfig.cs" />
+    <Compile Include="Module\Config\Configs\RandomNameConfig.cs" />
+    <Compile Include="Module\Config\Configs\RuleCollectionConfig.cs" />
+    <Compile Include="Module\Config\Configs\RuleConfig.cs" />
+    <Compile Include="Module\Config\Configs\SettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\SevenAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\SignInConfig.cs" />
+    <Compile Include="Module\Config\Configs\SkillBuffConfig.cs" />
+    <Compile Include="Module\Config\Configs\SkillConfig.cs" />
+    <Compile Include="Module\Config\Configs\SkillStateConfig.cs" />
+    <Compile Include="Module\Config\Configs\SlotZoneElementConfig.cs" />
+    <Compile Include="Module\Config\Configs\SlotZoneRateConfig.cs" />
+    <Compile Include="Module\Config\Configs\SlotZoneTypeConfig.cs" />
+    <Compile Include="Module\Config\Configs\StoreConfig.cs" />
+    <Compile Include="Module\Config\Configs\StoreIconConfig.cs" />
+    <Compile Include="Module\Config\Configs\StorePackConfig.cs" />
+    <Compile Include="Module\Config\Configs\StoreResConfig.cs" />
+    <Compile Include="Module\Config\Configs\StoryConfig.cs" />
+    <Compile Include="Module\Config\Configs\SummonConfig.cs" />
+    <Compile Include="Module\Config\Configs\SummonSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\SysShareConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskBountyConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskChapConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskChapListConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskHeroicConfig.cs" />
+    <Compile Include="Module\Config\Configs\TaskNewbieConfig.cs" />
+    <Compile Include="Module\Config\Configs\TitanAwardConfig.cs" />
+    <Compile Include="Module\Config\Configs\TitanConfig.cs" />
+    <Compile Include="Module\Config\Configs\TitanLevelConfig.cs" />
+    <Compile Include="Module\Config\Configs\TreasureConfig.cs" />
+    <Compile Include="Module\Config\Configs\VipConfig.cs" />
+    <Compile Include="Module\Config\Configs\VipGiftConfig.cs" />
+    <Compile Include="Module\Config\Configs\WarBoxConfig.cs" />
+    <Compile Include="Module\Config\Configs\WarSettingConfig.cs" />
+    <Compile Include="Module\Config\Configs\WarSpecialConfig.cs" />
+    <Compile Include="Module\Config\Configs\WarSpecialSymbolConfig.cs" />
+    <Compile Include="Module\Config\Configs\WarSymbolConfig.cs" />
+    <Compile Include="Module\Lang\Lang.cs" />
+    <Compile Include="Module\Lang\LangMgr.cs" />
     <Compile Include="Module\Pool\GameObjectPool.cs" />
     <Compile Include="Module\Pool\Pool.cs" />
     <Compile Include="Module\Sound\SoundMgr.cs" />
