--- a/Tools/Tools/bin/x64/Debug/DefSupport/Setting/ProjectSetting.json
+++ b/Tools/Tools/bin/x64/Debug/DefSupport/Setting/ProjectSetting.json
@@ -6,7 +6,7 @@
 		"ProjectDir": "F:/anyelse/HotFix_FrameWork",
 		"ClientDir": "$ProjectDir$/$Name$",
 		"ClientHotDir": "$ProjectDir$/$HotName$",
-		"ServerDir": "$ProjectDir$/Server",
+		"ServerDir": "$ProjectDir$/Server/GameServer",
 		"ConfigDir": "$ProjectDir$/ProtoConfig/Config",
 		"ProtoDir": "$ProjectDir$/ProtoConfig/Proto",
 		"GMServerDir": "$ProjectDir$/GM/GMServer",
