--- a/Server/GameServer/GameServer.csproj
+++ b/Server/GameServer/GameServer.csproj
@@ -43,8 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module\NetMgr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheThird\Telepathy\Client.cs" />
+    <Compile Include="TheThird\Telepathy\Common.cs" />
+    <Compile Include="TheThird\Telepathy\ConnectionState.cs" />
+    <Compile Include="TheThird\Telepathy\EventType.cs" />
+    <Compile Include="TheThird\Telepathy\Log.cs" />
+    <Compile Include="TheThird\Telepathy\MagnificentReceivePipe.cs" />
+    <Compile Include="TheThird\Telepathy\MagnificentSendPipe.cs" />
+    <Compile Include="TheThird\Telepathy\NetworkStreamExtensions.cs" />
+    <Compile Include="TheThird\Telepathy\Pool.cs" />
+    <Compile Include="TheThird\Telepathy\Server.cs" />
+    <Compile Include="TheThird\Telepathy\ThreadFunctions.cs" />
+    <Compile Include="TheThird\Telepathy\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
