新增通用工具

--- a/Server/MyServer/CommonLib/CommonLib.csproj
+++ b/Server/MyServer/CommonLib/CommonLib.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\..\Product\GameLib\</OutputPath>
+    <OutputPath>..\..\Product\CommonLib\</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
