--- a/Tools/Tools/Tools.csproj
+++ b/Tools/Tools/Tools.csproj
@@ -143,6 +143,13 @@
       <DependentUpon>GMExportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GMExport\GMExportHelper.cs" />
+    <Compile Include="LogExport\LogExportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogExport\LogExportForm.Designer.cs">
+      <DependentUpon>LogExportForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LogExport\LogExportHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -195,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GMExport\GMExportForm.resx">
       <DependentUpon>GMExportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LogExport\LogExportForm.resx">
+      <DependentUpon>LogExportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
