--- a/Server/MyServer/LoginServer/App.config
+++ b/Server/MyServer/LoginServer/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <section name="platforms" type="CommonLib.Configuration.PlatformSection, CommonLib" />
@@ -13,7 +13,7 @@
     <!--GameKey所有服务保持一至-->
     <add key="GameKey" value="!@@#$$~123AbcdEfTTsaef" />
     <!--调试模式 1调试打印消息日志 0运行模式不打印-->
-    <add key="DebugModel" value="1" />
+    <add key="DebugModel" value="0" />
     <!--畅游日志文件存放路径-->
     <!--<add key="CyLogFilePath" value="../cylog/" />-->
     <!--服务器标识 正式服zhengshi 提审服tishen  目前只有两个-->
